sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:5: error: '(' expected but identifier found.
    if plusPetit(i+1,i){
       ^AlgBubbleSort1:16: error: Unmatched closing brace '}' ignored here
}
^