sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var i: Int = 0
  while (i != getNombreValeurs()){
    if plusPetit(i+1,i){
      echange(i,i+1)
      i = 0
    }
    i = i + 1
 
    }
  }
}